--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
     <img src="car.jpeg" alt="">
     <p>The image above is a car</p>
+    <p>It looks okay...</p>
   </body>
 </html>
